@@ -1,7 +1,0 @@
-﻿//namespace FlatFileParserUnitTests.TypeConverters.Interfaces
-//{
-//    public interface IPrimitiveTypeConverter
-//    {
-//        string GetConvertedString(string unparsedString);
-//    }
-//}
