@@ -134,3 +134,6 @@
 	- Implemented default TypeConverter for primitive types w/ reflection and built in Parse method.
 	- Implemented boolean specific type converter to account for 0 and 1, and uppercase True / False strings. 
 	- Implemented unit tests for boolean type converter and number of rows matching input file
+
+7-3-18
+	- Changed ParseFile to right trim string fields. This should eventually be configurable. 
